agregué scss y transiciones

--- a/pages/eventos.html
+++ b/pages/eventos.html
@@ -1,19 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <!-- Bootstrap-->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
+    <!-- Bootstrap-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
     <!-- CSS link -->
-     <link rel="stylesheet" href="../style.css">
-    <!--Font-->
-    <style>
-    @import url('https://fonts.googleapis.com/css2?family=Exo+2:ital,wght@0,100..900;1,100..900&family=Oxanium:wght@200..800&family=Share+Tech&family=WDXL+Lubrifont+TC&display=swap');
-    </style>
+    <link rel="stylesheet" href="../styles/style.css">
 
     <title>Eventos</title>
 </head>
+
 <body>
     <header>
         <nav class="navbar navbar-expand-lg bg-navbar-propio">
@@ -21,148 +20,161 @@
                 <a class="navbar-brand" href="../index.html">
                     <img class="logo" src="../images/logo.jpeg" alt="logoArcade">
                 </a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                 <div class="collapse navbar-collapse" id="navbarNav">
+                <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                        <a class="nav-link" href="../pages/juegos.html">Juegos</a>
+                            <a class="nav-link" href="../pages/juegos.html">Juegos</a>
                         </li>
                         <li class="nav-item">
-                        <a class="nav-link" href="../pages/karaoke.html">Karaoke</a>
+                            <a class="nav-link" href="../pages/karaoke.html">Karaoke</a>
                         </li>
                         <li class="nav-item">
-                        <a class="nav-link" href="#">Eventos</a>
+                            <a class="nav-link" href="#">Eventos</a>
                         </li>
                         <li class="nav-item">
-                        <a class="nav-link" href="../pages/contacto.html">Contacto</a>
+                            <a class="nav-link" href="../pages/contacto.html">Contacto</a>
                         </li>
                     </ul>
                 </div>
-             </div>
+            </div>
         </nav>
     </header>
 
-<main>
-    <div class="container text-center">
-        <h1 class="titulo-main">¿Querés festejar con nosotros?</h1>
+    <main>
+        <div class="container text-center">
+            <h1 class="titulo-main">¿Querés festejar con nosotros?</h1>
 
-        <h2 class="sub-titulo pb-4">Conocé nuestras opciones</h2>
-    </div>
+            <h2 class="sub-titulo pb-4">Conocé nuestras opciones</h2>
+        </div>
 
-<!--Accordion-->
-<section class="container mx-auto p-5 acordeon">
-    <div class="accordion accordion-flush" id="accordionFlushExample">
-    <div class="accordion-item acordeon">
-            <h2 class="accordion-header sub-texto acordeon">
-            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">Eventos Destacados </button>
-            </h2>
-    <div id="flush-collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
-    <div class="accordion-body">
-        <ul class="acordeon">
-            <li>Torneos de videojuegos (ej. "Campeonato de Mario Kart")</li>
-            <li>Noches temáticas de karaoke (ej. "Noche de rock", "Especial K-pop", "Karaoke ochentero")</li>
-            <li>Fiestas de disfraces</li>
-            <li>Sesiones de "micrófono abierto"</li>
-            <li>Días familiares o matinés para niños</li>
-        </ul>
-      </div>
-     </div>
-    </div>
-  <div class="accordion-item acordeon">
-    <h2 class="accordion-header sub-texto">
-      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
-        Eventos Privados y Reservas
-      </button>
-    </h2>
-    <div id="flush-collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
-      <div class="accordion-body">
-        <ul>
-            <li>Cumpleaños</li>
-            <li>Fiestas de empresas</li>
-            <li>Reuniones escolares o universitarias</li>
-            <li>Fiestas privadas de karaoke o torneos de arcade</li>
-        </ul>
-      </div>
-    </div>
-  </div>
-  <div class="accordion-item acordeon">
-    <h2 class="accordion-header sub-texto">
-      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
-        Próximos Eventos
-      </button>
-    </h2>
-    <div id="flush-collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
-      <div class="accordion-body">
-        <ul>
-            <li>Noche de Karaoke Temática: "Retro Hits 80's & 90's"</li>
-            <li>Torneo Arcade: Street Fighter V</li>
-            <li>Fiesta Gamer Infantil</li>
-        </ul>
-      </div>
-    </div>
-  </div>
-</div>
-    </section>
-
-<!--Carousel-->
-    <section class="p-5">
-        <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
-            <div class="carousel-inner">
-                <div class="carousel-item active">
-                    <img src="../images/arcade.gente.jpg" class="d-block w-100" alt="...">
+        <!--Accordion-->
+        <section class="container mx-auto p-5 acordeon">
+            <div class="accordion accordion-flush" id="accordionFlushExample">
+                <div class="accordion-item acordeon">
+                    <h2 class="accordion-header sub-texto acordeon">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#flush-collapseOne" aria-expanded="false"
+                            aria-controls="flush-collapseOne">Eventos Destacados </button>
+                    </h2>
+                    <div id="flush-collapseOne" class="accordion-collapse collapse"
+                        data-bs-parent="#accordionFlushExample">
+                        <div class="accordion-body">
+                            <ul class="acordeon">
+                                <li>Torneos de videojuegos (ej. "Campeonato de Mario Kart")</li>
+                                <li>Noches temáticas de karaoke (ej. "Noche de rock", "Especial K-pop", "Karaoke
+                                    ochentero")</li>
+                                <li>Fiestas de disfraces</li>
+                                <li>Sesiones de "micrófono abierto"</li>
+                                <li>Días familiares o matinés para niños</li>
+                            </ul>
+                        </div>
+                    </div>
                 </div>
-                <div class="carousel-item">
-                    <img src="../images/karaoke1.jpeg" class="d-block w-100" alt="...">
+                <div class="accordion-item acordeon">
+                    <h2 class="accordion-header sub-texto">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
+                            Eventos Privados y Reservas
+                        </button>
+                    </h2>
+                    <div id="flush-collapseTwo" class="accordion-collapse collapse"
+                        data-bs-parent="#accordionFlushExample">
+                        <div class="accordion-body">
+                            <ul>
+                                <li>Cumpleaños</li>
+                                <li>Fiestas de empresas</li>
+                                <li>Reuniones escolares o universitarias</li>
+                                <li>Fiestas privadas de karaoke o torneos de arcade</li>
+                            </ul>
+                        </div>
+                    </div>
                 </div>
-                <div class="carousel-item">
-                    <img src="../images/arcade.gente2.webp" class="d-block w-100" alt="...">
+                <div class="accordion-item acordeon">
+                    <h2 class="accordion-header sub-texto">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#flush-collapseThree" aria-expanded="false"
+                            aria-controls="flush-collapseThree">
+                            Próximos Eventos
+                        </button>
+                    </h2>
+                    <div id="flush-collapseThree" class="accordion-collapse collapse"
+                        data-bs-parent="#accordionFlushExample">
+                        <div class="accordion-body">
+                            <ul>
+                                <li>Noche de Karaoke Temática: "Retro Hits 80's & 90's"</li>
+                                <li>Torneo Arcade: Street Fighter V</li>
+                                <li>Fiesta Gamer Infantil</li>
+                            </ul>
+                        </div>
+                    </div>
                 </div>
             </div>
+        </section>
+
+        <!--Carousel-->
+        <section class="p-5">
+            <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img src="../images/arcade.gente.jpg" class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="../images/karaoke1.jpeg" class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="../images/arcade.gente2.webp" class="d-block w-100" alt="...">
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
+
+    <footer>
+        <div>
+            <ul class="info">
+                <h4>
+                    Información de contacto
+                </h4>
+                <li>
+                    Dirección: Av. Siempreviva 1212
+                </li>
+                <li>
+                    Tel.: 4242-5452
+                </li>
+            </ul>
         </div>
-    </section>
-</main>
 
-<footer class="text-center text-lg-start" style="background-color: black;">
-    <div class="container p-4">
-    <div class="row">
-      <div class="col-lg-6 col-md-12 mb-4 mb-md-0">
-        <h5 class="text-uppercase">Información de contacto</h5>
+        <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.05);">
+            © 2020 Copyright:
+            <a class="text-body" href="https://mdbootstrap.com/">Salón de Arcade</a>
+        </div>
 
-        <ul>
-            <li>Dirección: Av. Siempreviva 1212</li>
-            <li> Tel.: 4242-5452</li>
-        </ul>
-      </div>
-
-      <div class="col-lg-6 mx-auto">
-        <h5 class="text-uppercase">Visitá nuestra redes sociales</h5>
-
-        <ul class="row mx-auto px-auto">
-            <li>
-                <a href="https://www.instagram.com/">
-                    <img class="col-2 logos me-3" src="../images/igLogo.jpeg" alt="logoInstagram">
+        <div>
+            <ul class="redes">
+                <h4>
+                    Visitá nuestras redes sociales
+                </h4>
+                <a href="#">
+                    <img class="logo-red" src="../images/igLogo.jpeg" alt="logoDeInstagram">
                 </a>
-                 <a href="https://www.facebook.com/">
-                    <img class="col-2 logos" src="../images/facebooklogo.svg.png" alt="logoFacebook">
+                <a href="#">
+                    <img class="logo-red" src="../images/facebooklogo.svg.png" alt="logoDeFacebook">
                 </a>
-                 <a href="https://www.linkedin.com/feed/">
-                    <img class="col-2" src="../images/link.logo.webp" alt="logoLinkedin">
+                <a href="#">
+                    <img class="logo-red" src="../images/link.logo.webp" alt="logoDeLinkedin">
                 </a>
-            </li>
-        </ul>
-      </div>
-    </div>
-  </div>
+            </ul>
+        </div>
+    </footer>
 
-  <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.05);">
-    © 2020 Copyright:
-    <a class="text-body" href="https://mdbootstrap.com/">Salón de Arcade</a>
-  </div>
-</footer>
-
- <!-- Bootstrap JS -->
-     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js" integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" crossorigin="anonymous"></script>
+    <!-- Bootstrap JS -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q"
+        crossorigin="anonymous"></script>
 </body>
+
 </html>
