--- a/pages/juegos.html
+++ b/pages/juegos.html
@@ -1,155 +1,174 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <!-- Bootstrap-->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
+    <!-- Bootstrap-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
     <!-- CSS link -->
-     <link rel="stylesheet" href="../style.css">
-    <!--Font-->
-    <style>
-    @import url('https://fonts.googleapis.com/css2?family=Exo+2:ital,wght@0,100..900;1,100..900&family=Oxanium:wght@200..800&family=Share+Tech&family=WDXL+Lubrifont+TC&display=swap');
-    </style>
+    <link rel="stylesheet" href="../styles/style.css">
+
     <title>Juegos</title>
 </head>
+
 <body>
-<header>
+    <header>
         <nav class="navbar navbar-expand-lg bg-navbar-propio">
             <div class="container-fluid">
                 <a class="navbar-brand" href="../index.html">
                     <img class="logo" src="../images/logo.jpeg" alt="logoArcade">
                 </a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                 <div class="collapse navbar-collapse" id="navbarNav">
+                <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="#">Juegos</a>
+                            <a class="nav-link" aria-current="page" href="#">Juegos</a>
                         </li>
                         <li class="nav-item">
-                        <a class="nav-link" href="../pages/karaoke.html">Karaoke</a>
+                            <a class="nav-link" href="/pages/karaoke.html">Karaoke</a>
                         </li>
                         <li class="nav-item">
-                        <a class="nav-link" href="../pages/eventos.html">Eventos</a>
+                            <a class="nav-link" href="/pages/eventos.html">Eventos</a>
                         </li>
                         <li class="nav-item">
-                        <a class="nav-link" href="../pages/contacto.html">Contacto</a>
+                            <a class="nav-link" href="/pages/contacto.html">Contacto</a>
                         </li>
                     </ul>
                 </div>
-             </div>
+            </div>
         </nav>
-</header>
+    </header>
 
-<main>
+    <main>
 
-<div>
-    <h2 class="titulo-main text-center">¿A qué vas a jugar hoy?</h2>
-</div>
-    <section>
-        <div id="carouselExampleIndicators" class="carousel slide">
-            <div class="carousel-indicators">
-                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
-            </div>
-            <div class="carousel-inner">
-                <div class="carousel-item active">
-                    <img src="../images/arcade3.jpg" class="d-block w-100" alt="...">
-                </div>
-                <div class="carousel-item">
-                    <img src="../images/karaoke3.jpg" class="d-block w-100" alt="...">
-                </div>
-                <div class="carousel-item">
-                    <img src="../images/arcade8.png" class="d-block w-100" alt="...">
-                </div>
-            </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Previous</span>
-        </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Next</span>
-        </button>
+        <div>
+            <h1 class="titulo-main text-center">¿A qué vas a jugar hoy?</h1>
         </div>
-    </section>
+        <section>
+            <div id="carouselExampleIndicators" class="carousel slide">
+                <div class="carousel-indicators">
+                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0"
+                        class="active" aria-current="true" aria-label="Slide 1"></button>
+                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
+                        aria-label="Slide 2"></button>
+                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
+                        aria-label="Slide 3"></button>
+                </div>
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img src="../images/arcade3.jpg" class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="../images/karaoke3.jpg" class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="../images/arcade8.png" class="d-block w-100" alt="...">
+                    </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
+                    data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
+                    data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
+            </div>
+        </section>
 
-<!--Cards-->    
-<section class="container text-center mx-auto p-4">
-<div class="row row-cols-md-2 d-flex justify-content-center">
-<div class="card text-bg-info mx-3 col-3 col-sm-12" style="max-width: 18rem;">
-  <div class="card-header">¡Entra al Mundo de la Diversión!</div>
-    <div class="card-body">
-    <p class="card-text">¡Prepárate para vivir una experiencia llena de adrenalina y risas! Nuestra zona de arcade está repleta de clásicos inolvidables, juegos de carreras, realidad virtual y los últimos desafíos para romper récords. No importa si eres un experto del joystick o solo vienes a pasar un buen rato, aquí hay diversión para todos.</p>
-    </div>
-</div>    
-<div class="card text-bg-warning mx-3 col-3 col-sm-12" style="max-width: 18rem;">
-  <div class="card-header">¡Juega, Gana y Canjea! </div>
-  <div class="card-body">
-    <p class="card-text">Cada partida cuenta: mientras más juegas, más puntos acumulas. En nuestra zona de arcade, no solo te diviertes—¡también puedes ganar increíbles premios! Desde dulces y juguetes hasta artículos coleccionables y electrónicos, tenemos algo para todos.</p>
-  </div>
-</div>
-<div class="row card text-bg-light mx-3 col-3 col-sm-12" style="max-width: 18rem;">
-  <div class="card-header">¡Diversión con Sabor!</div>
-  <div class="card-body">
-    <p class="card-text">Porque jugar da hambre… ¡y cantar también! En nuestro local no solo te lo pasas genial con los juegos y el karaoke, también puedes disfrutar de una deliciosa selección de comidas y snacks. ¡Juega, canta y come sin salir del lugar!</p>
-  </div>
-</div>
-<div class="row card text-bg-dark mx-3 col-3 col-sm-12" style="max-width: 18rem;">
-  <div class="card-header">
-    <a class="card-link" href="/eventos.html">¡Celebra con Nosotros! </a>
-</div>
-  <div class="card-body">
-    <p class="card-text">¿Cumpleaños, despedida, reunión con amigos o cualquier excusa para festejar? ¡Este es el lugar perfecto! En nuestro espacio puedes organizar eventos inolvidables con todo lo que necesitas: juegos, karaoke, comida deliciosa y mucha diversión.</p>
-  </div>
-</div>
-</div>
-    </section>
+        <!--Cards-->
+        <section class="container text-center mx-auto p-4">
+            <div class="row row-cols-md-2 d-flex justify-content-center">
+                <div class="card primera mx-3 col-3 col-sm-12" style="max-width: 18rem;">
+                    <div class="card-header">¡Entra al Mundo de la Diversión!</div>
+                    <div class="card-body">
+                        <p class="card-text">¡Prepárate para vivir una experiencia llena de adrenalina y risas! Nuestra
+                            zona de arcade está repleta de clásicos inolvidables, juegos de carreras, realidad virtual y
+                            los últimos desafíos para romper récords. No importa si eres un experto del joystick o solo
+                            vienes a pasar un buen rato, aquí hay diversión para todos.</p>
+                    </div>
+                </div>
+                <div class="card segunda mx-3 col-3 col-sm-12" style="max-width: 18rem;">
+                    <div class="card-header">¡Juega, Gana y Canjea! </div>
+                    <div class="card-body">
+                        <p class="card-text">Cada partida cuenta: mientras más juegas, más puntos acumulas. En nuestra
+                            zona de arcade, no solo te diviertes—¡también puedes ganar increíbles premios! Desde dulces
+                            y juguetes hasta artículos coleccionables y electrónicos, tenemos algo para todos.</p>
+                    </div>
+                </div>
+                <div class="row card tercera mx-3 col-3 col-sm-12" style="max-width: 18rem;">
+                    <div class="card-header">¡Diversión con Sabor!</div>
+                    <div class="card-body">
+                        <p class="card-text">Porque jugar da hambre… ¡y cantar también! En nuestro local no solo te lo
+                            pasas genial con los juegos y el karaoke, también puedes disfrutar de una deliciosa
+                            selección de comidas y snacks. ¡Juega, canta y come sin salir del lugar!</p>
+                    </div>
+                </div>
+                <div class="row card cuarta mx-3 col-3 col-sm-12" style="max-width: 18rem;">
+                    <div class="card-header">
+                        <a class="card-link" href="eventos.html">¡Celebra con Nosotros! </a>
+                    </div>
+                    <div class="card-body">
+                        <p class="card-text">¿Cumpleaños, despedida, reunión con amigos o cualquier excusa para
+                            festejar? ¡Este es el lugar perfecto! En nuestro espacio puedes organizar eventos
+                            inolvidables con todo lo que necesitas: juegos, karaoke, comida deliciosa y mucha diversión.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </section>
 
-</main>
+    </main>
 
-<footer class="text-center text-lg-start" style="background-color: black;">
-    <div class="container p-4">
-    <div class="row">
-      <div class="col-lg-6 col-md-12 mb-4 mb-md-0">
-        <h5 class="text-uppercase">Información de contacto</h5>
+    <footer>
+        <div>
+            <ul class="info">
+                <h4>
+                    Información de contacto
+                </h4>
+                <li>
+                    Dirección: Av. Siempreviva 1212
+                </li>
+                <li>
+                    Tel.: 4242-5452
+                </li>
+            </ul>
+        </div>
 
-        <ul>
-            <li>Dirección: Av. Siempreviva 1212</li>
-            <li> Tel.: 4242-5452</li>
-        </ul>
-      </div>
+        <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.05);">
+            © 2020 Copyright:
+            <a class="text-body" href="https://mdbootstrap.com/">Salón de Arcade</a>
+        </div>
 
-      <div class="col-lg-6 mx-auto">
-        <h5 class="text-uppercase">Visitá nuestra redes sociales</h5>
-
-        <ul class="row mx-auto px-auto">
-            <li>
-                <a href="https://www.instagram.com/">
-                    <img class="col-2 logos me-3" src="../images/igLogo.jpeg" alt="logoInstagram">
+        <div>
+            <ul class="redes">
+                <h4>
+                    Visitá nuestras redes sociales
+                </h4>
+                <a href="#">
+                    <img class="logo-red" src="../images/igLogo.jpeg" alt="logoDeInstagram">
                 </a>
-                 <a href="https://www.facebook.com/">
-                    <img class="col-2 logos" src="../images/facebooklogo.svg.png" alt="logoFacebook">
+                <a href="#">
+                    <img class="logo-red" src="../images/facebooklogo.svg.png" alt="logoDeFacebook">
                 </a>
-                 <a href="https://www.linkedin.com/feed/">
-                    <img class="col-2" src="../images/link.logo.webp" alt="logoLinkedin">
+                <a href="#">
+                    <img class="logo-red" src="../images/link.logo.webp" alt="logoDeLinkedin">
                 </a>
-            </li>
-        </ul>
-      </div>
-    </div>
-  </div>
+            </ul>
+        </div>
+    </footer>
 
-  <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.05);">
-    © 2020 Copyright:
-    <a class="text-body" href="https://mdbootstrap.com/">Salón de Arcade</a>
-  </div>
-</footer>
-
- <!-- Bootstrap JS -->
-     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js" integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" crossorigin="anonymous"></script>
+    <!-- Bootstrap JS -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q"
+        crossorigin="anonymous"></script>
 </body>
+
 </html>
