--- a/index.html
+++ b/index.html
@@ -1,19 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Bootstrap-->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
     <!-- CSS link -->
-     <link rel="stylesheet" href="style.css">
-    <!--Font-->
-    <style>
-    @import url('https://fonts.googleapis.com/css2?family=Exo+2:ital,wght@0,100..900;1,100..900&family=Oxanium:wght@200..800&family=Share+Tech&family=WDXL+Lubrifont+TC&display=swap');
-    </style>
+    <link rel="stylesheet" href="./styles/style.css">
 
     <title>Arcade y Karaoke</title>
 </head>
+
 <body>
     <header>
         <nav class="navbar navbar-expand-lg bg-navbar-propio">
@@ -21,33 +20,34 @@
                 <a class="navbar-brand" href="#">
                     <img class="logo" src="./images/logo.jpeg" alt="logoArcade">
                 </a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                 <div class="collapse navbar-collapse" id="navbarNav">
+                <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                        <a class="nav-link" href="./pages/juegos.html">Juegos</a>
+                            <a class="nav-link" href="/pages/juegos.html">Juegos</a>
                         </li>
                         <li class="nav-item">
-                        <a class="nav-link" href="./pages/karaoke.html">Karaoke</a>
+                            <a class="nav-link" href="/pages/karaoke.html">Karaoke</a>
                         </li>
                         <li class="nav-item">
-                        <a class="nav-link" href="./pages/eventos.html">Eventos</a>
+                            <a class="nav-link" href="/pages/eventos.html">Eventos</a>
                         </li>
                         <li class="nav-item">
-                        <a class="nav-link" href="./pages/contacto.html">Contacto</a>
+                            <a class="nav-link" href="/pages/contacto.html">Contacto</a>
                         </li>
                     </ul>
                 </div>
-             </div>
+            </div>
         </nav>
     </header>
 
     <main>
         <section class="container text-center">
             <h1 class="titulo-main">¡Arcade y Karaoke!</h1>
-            
+
             <div class="row">
                 <img class="col-md-12 col-lg-6" src="./images/arcade1.jpg" alt="salaArcade">
                 <img class="col-md-12 col-lg-6" src="./images/karaoke1.jpeg" alt="salaKaraoke">
@@ -65,46 +65,71 @@
         </section>
     </main>
 
+    <!--Carousel-->
+    <section class="container text-center mx-auto p-4">
+        <div class="row row-cols-md-2 d-flex justify-content-center">
+            <div class="card mx-3 col-3 col-sm-6" style="max-width: 18rem;">
+                <div class="card-header">ZONA ARCADE</div>
+                <div class="card-body">
+                    <p class="card-text">¡Diversión garantizada desde que entras hasta que sales! Te esperan juegos emocionantes, música, risas y momentos inolvidables. Ya sea que vengas a jugar, a cantar o a celebrar, este es tu lugar.</p>
+                </div>
+            </div>
+            <div class="card mx-3 col-3 col-sm-6" style="max-width: 18rem;">
+                <div class="card-header">SALAS PRIVADAS DE KARAOKE</div>
+                <div class="card-body">
+                    <p class="card-text">¡Saca al artista que llevas dentro! Nuestras salas de karaoke son privadas, cómodas y cuentan con miles de canciones en varios idiomas. Perfectas para grupos de amigos, cumpleaños o una noche diferente.</p>
+                </div>
+            </div>
+            <div class="row card mx-3 col-3 col-sm-6" style="max-width: 18rem;">
+                <div class="card-header">SNACKS Y BEBIDAS</div>
+                <div class="card-body">
+                    <p class="card-text">Haz una pausa para recargar energías con nuestras deliciosas opciones de snacks, combos, bebidas y postres. ¡No hay diversión sin buena comida!</p>
+                </div>
+            </div>
+    </section>
 
-<footer class="text-center text-lg-start" style="background-color: black;">
-    <div class="container p-4">
-    <div class="row">
-      <div class="col-lg-6 col-md-12 mb-4 mb-md-0">
-        <h5 class="text-uppercase">Información de contacto</h5>
+    <footer>
+        <div>
+            <ul class="info">
+                <h4>
+                    Información de contacto
+                </h4>
+                <li>
+                    Dirección: Av. Siempreviva 1212
+                </li>
+                <li>
+                    Tel.: 4242-5452
+                </li>
+            </ul>
+        </div>
 
-        <ul>
-            <li>Dirección: Av. Siempreviva 1212</li>
-            <li> Tel.: 4242-5452</li>
-        </ul>
-      </div>
+        <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.05);">
+            © 2020 Copyright:
+            <a class="text-body" href="https://mdbootstrap.com/">Salón de Arcade</a>
+        </div>
 
-      <div class="col-lg-6 mx-auto">
-        <h5 class="text-uppercase">Visitá nuestra redes sociales</h5>
-
-        <ul class="row mx-auto px-auto">
-            <li>
-                <a href="https://www.instagram.com/">
-                    <img class="col-2 logos me-3" src="./images/igLogo.jpeg" alt="logoInstagram">
+        <div>
+            <ul class="redes">
+                <h4>
+                    Visitá nuestras redes sociales
+                </h4>
+                <a href="#">
+                    <img class="logo-red" src="./images/igLogo.jpeg" alt="logoDeInstagram">
                 </a>
-                 <a href="https://www.facebook.com/">
-                    <img class="col-2 logos" src="./images/facebooklogo.svg.png" alt="logoFacebook">
+                <a href="#">
+                    <img class="logo-red" src="./images/facebooklogo.svg.png" alt="logoDeFacebook">
                 </a>
-                 <a href="https://www.linkedin.com/feed/">
-                    <img class="col-2" src="./images/link.logo.webp" alt="logoLinkedin">
+                <a href="#">
+                    <img class="logo-red" src="./images/link.logo.webp" alt="logoDeLinkedin">
                 </a>
-            </li>
-        </ul>
-      </div>
-    </div>
-  </div>
-
-  <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.05);">
-    © 2020 Copyright:
-    <a class="text-body" href="https://mdbootstrap.com/">Salón de Arcade</a>
-  </div>
-</footer>
+            </ul>
+        </div>
+    </footer>
 
     <!-- Bootstrap JS -->
-     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js" integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q"
+        crossorigin="anonymous"></script>
 </body>
+
 </html>
