--- a/index.html
+++ b/index.html
@@ -27,16 +27,16 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link" href="/pages/juegos.html">Juegos</a>
+                            <a class="nav-link" href="./pages/juegos.html">Juegos</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/pages/karaoke.html">Karaoke</a>
+                            <a class="nav-link" href="./pages/karaoke.html">Karaoke</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/pages/eventos.html">Eventos</a>
+                            <a class="nav-link" href="./pages/eventos.html">Eventos</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/pages/contacto.html">Contacto</a>
+                            <a class="nav-link" href="./pages/contacto.html">Contacto</a>
                         </li>
                     </ul>
                 </div>
