--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -27,13 +27,13 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link" href="../pages/juegos.html">Juegos</a>
+                            <a class="nav-link" href="./juegos.html">Juegos</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="../pages/karaoke.html">Karaoke</a>
+                            <a class="nav-link" href="./karaoke.html">Karaoke</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="../pages/eventos.html">Eventos</a>
+                            <a class="nav-link" href="./eventos.html">Eventos</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#">Contacto</a>
