--- a/pages/juegos.html
+++ b/pages/juegos.html
@@ -30,13 +30,13 @@
                             <a class="nav-link" aria-current="page" href="#">Juegos</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/pages/karaoke.html">Karaoke</a>
+                            <a class="nav-link" href="./karaoke.html">Karaoke</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/pages/eventos.html">Eventos</a>
+                            <a class="nav-link" href="./eventos.html">Eventos</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/pages/contacto.html">Contacto</a>
+                            <a class="nav-link" href="./contacto.html">Contacto</a>
                         </li>
                     </ul>
                 </div>
