--- a/index.html
+++ b/index.html
@@ -67,20 +67,20 @@
 
     <!--Carousel-->
     <section class="container text-center mx-auto p-4">
-        <div class="row row-cols-md-2 d-flex justify-content-center">
-            <div class="card mx-3 col-3 col-sm-6" style="max-width: 18rem;">
+        <div class="row row-cols-md-6 d-flex justify-content-center">
+            <div class=" card mx-3 col-sm-3">
                 <div class="card-header">ZONA ARCADE</div>
                 <div class="card-body">
                     <p class="card-text">¡Diversión garantizada desde que entras hasta que sales! Te esperan juegos emocionantes, música, risas y momentos inolvidables. Ya sea que vengas a jugar, a cantar o a celebrar, este es tu lugar.</p>
                 </div>
             </div>
-            <div class="card mx-3 col-3 col-sm-6" style="max-width: 18rem;">
+            <div class="card mx-3 col-sm-3">
                 <div class="card-header">SALAS PRIVADAS DE KARAOKE</div>
                 <div class="card-body">
                     <p class="card-text">¡Saca al artista que llevas dentro! Nuestras salas de karaoke son privadas, cómodas y cuentan con miles de canciones en varios idiomas. Perfectas para grupos de amigos, cumpleaños o una noche diferente.</p>
                 </div>
             </div>
-            <div class="row card mx-3 col-3 col-sm-6" style="max-width: 18rem;">
+            <div class="card mx-3 col-sm-3">
                 <div class="card-header">SNACKS Y BEBIDAS</div>
                 <div class="card-body">
                     <p class="card-text">Haz una pausa para recargar energías con nuestras deliciosas opciones de snacks, combos, bebidas y postres. ¡No hay diversión sin buena comida!</p>
