--- a/pages/juegos.html
+++ b/pages/juegos.html
@@ -85,8 +85,8 @@
 
         <!--Cards-->
         <section class="container text-center mx-auto p-4">
-            <div class="row row-cols-md-2 d-flex justify-content-center">
-                <div class="card primera mx-3 col-3 col-sm-12" style="max-width: 18rem;">
+            <div class="row row-cols-md-6 d-flex justify-content-center">
+                <div class="card primera mx-3 col-sm-3">
                     <div class="card-header">¡Entra al Mundo de la Diversión!</div>
                     <div class="card-body">
                         <p class="card-text">¡Prepárate para vivir una experiencia llena de adrenalina y risas! Nuestra
@@ -95,7 +95,7 @@
                             vienes a pasar un buen rato, aquí hay diversión para todos.</p>
                     </div>
                 </div>
-                <div class="card segunda mx-3 col-3 col-sm-12" style="max-width: 18rem;">
+                <div class="card segunda mx-3 col-sm-3">
                     <div class="card-header">¡Juega, Gana y Canjea! </div>
                     <div class="card-body">
                         <p class="card-text">Cada partida cuenta: mientras más juegas, más puntos acumulas. En nuestra
@@ -103,7 +103,7 @@
                             y juguetes hasta artículos coleccionables y electrónicos, tenemos algo para todos.</p>
                     </div>
                 </div>
-                <div class="row card tercera mx-3 col-3 col-sm-12" style="max-width: 18rem;">
+                <div class="row card tercera mx-3 col-sm-3">
                     <div class="card-header">¡Diversión con Sabor!</div>
                     <div class="card-body">
                         <p class="card-text">Porque jugar da hambre… ¡y cantar también! En nuestro local no solo te lo
@@ -111,7 +111,7 @@
                             selección de comidas y snacks. ¡Juega, canta y come sin salir del lugar!</p>
                     </div>
                 </div>
-                <div class="row card cuarta mx-3 col-3 col-sm-12" style="max-width: 18rem;">
+                <div class="row card cuarta mx-3 col-sm-3">
                     <div class="card-header">
                         <a class="card-link" href="eventos.html">¡Celebra con Nosotros! </a>
                     </div>
