--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Salón de Arcade y Karaoke, página con información general de nuestros espacios y juegos">
     <!-- Bootstrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
@@ -18,7 +19,7 @@
         <nav class="navbar navbar-expand-lg bg-navbar-propio">
             <div class="container-fluid">
                 <a class="navbar-brand" href="#">
-                    <img class="logo" src="./images/logo.jpeg" alt="logoArcade">
+                    <img class="logo" src="./images/logo.jpeg" alt="logo que muestra una consola de arcade">
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -49,13 +50,13 @@
             <h1 class="titulo-main">¡Arcade y Karaoke!</h1>
 
             <div class="row">
-                <img class="col-md-12 col-lg-6" src="./images/arcade1.jpg" alt="salaArcade">
-                <img class="col-md-12 col-lg-6" src="./images/karaoke1.jpeg" alt="salaKaraoke">
+                <img class="col-md-12 col-lg-6" src="./images/arcade1.jpg" alt="sala de arcade con mmuchos juegos">
+                <img class="col-md-12 col-lg-6" src="./images/karaoke1.jpeg" alt="sala de karaoke">
             </div>
 
             <div class="row">
-                <img class="col-md-12 col-lg-6" src="./images/karaoke2.webp" alt="salaKaraoke">
-                <img class="col-md-12 col-lg-6" src="./images/arcade2.jpg" alt="salaArcade">
+                <img class="col-md-12 col-lg-6" src="./images/karaoke2.webp" alt="sala de karaoke">
+                <img class="col-md-12 col-lg-6" src="./images/arcade2.jpg" alt="sala de arcade con mmuchos juegos">
             </div>
 
             <article>
@@ -66,21 +67,21 @@
     </main>
 
     <!--Carousel-->
-    <section class="container text-center mx-auto p-4">
+    <section class="container text-center mx-auto">
         <div class="row row-cols-md-6 d-flex justify-content-center">
-            <div class=" card mx-3 col-sm-3">
+            <div class="card mx-10 col-md-12">
                 <div class="card-header">ZONA ARCADE</div>
                 <div class="card-body">
                     <p class="card-text">¡Diversión garantizada desde que entras hasta que sales! Te esperan juegos emocionantes, música, risas y momentos inolvidables. Ya sea que vengas a jugar, a cantar o a celebrar, este es tu lugar.</p>
                 </div>
             </div>
-            <div class="card mx-3 col-sm-3">
+            <div class="card col-md-12">
                 <div class="card-header">SALAS PRIVADAS DE KARAOKE</div>
                 <div class="card-body">
                     <p class="card-text">¡Saca al artista que llevas dentro! Nuestras salas de karaoke son privadas, cómodas y cuentan con miles de canciones en varios idiomas. Perfectas para grupos de amigos, cumpleaños o una noche diferente.</p>
                 </div>
             </div>
-            <div class="card mx-3 col-sm-3">
+            <div class="card col-md-12">
                 <div class="card-header">SNACKS Y BEBIDAS</div>
                 <div class="card-body">
                     <p class="card-text">Haz una pausa para recargar energías con nuestras deliciosas opciones de snacks, combos, bebidas y postres. ¡No hay diversión sin buena comida!</p>
@@ -114,13 +115,13 @@
                     Visitá nuestras redes sociales
                 </h4>
                 <a href="#">
-                    <img class="logo-red" src="./images/igLogo.jpeg" alt="logoDeInstagram">
+                    <img class="logo-red" src="./images/igLogo.jpeg" alt="logo de Instagram">
                 </a>
                 <a href="#">
-                    <img class="logo-red" src="./images/facebooklogo.svg.png" alt="logoDeFacebook">
+                    <img class="logo-red" src="./images/facebooklogo.svg.png" alt="logo de Facebook">
                 </a>
                 <a href="#">
-                    <img class="logo-red" src="./images/link.logo.webp" alt="logoDeLinkedin">
+                    <img class="logo-red" src="./images/link.logo.webp" alt="logo de Linkedin">
                 </a>
             </ul>
         </div>
