--- a/pages/juegos.html
+++ b/pages/juegos.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Detalles de nuestros juegos disponibles">
     <!-- Bootstrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
@@ -153,13 +154,13 @@
                     Visitá nuestras redes sociales
                 </h4>
                 <a href="#">
-                    <img class="logo-red" src="../images/igLogo.jpeg" alt="logoDeInstagram">
+                    <img class="logo-red" src="../images/igLogo.jpeg" alt="logo de Instagram">
                 </a>
                 <a href="#">
-                    <img class="logo-red" src="../images/facebooklogo.svg.png" alt="logoDeFacebook">
+                    <img class="logo-red" src="../images/facebooklogo.svg.png" alt="logo de Facebook">
                 </a>
                 <a href="#">
-                    <img class="logo-red" src="../images/link.logo.webp" alt="logoDeLinkedin">
+                    <img class="logo-red" src="../images/link.logo.webp" alt="logo de Linkedin">
                 </a>
             </ul>
         </div>
